# src/controllers/comment.js
@@ -8,6 +8,19 @@ const Blog = require("../models/blog");
 
 module.exports = {
   create: async (req, res) => {
+     /*
+             #swagger.tags = ['Comments']
+              #swagger.summary = "Create Comment"
+            #swagger.description = "Look to <b>'Models/Comment'</b> for parameters."
+             #swagger.parameters['body'] = {
+                in: 'body',
+                required: 'true',
+                schema: {
+                    $ref: '#/definitions/Comment'
+                }
+            }
+        
+        */
     req.body.user = req.user.username;
     req.body.post = req.params.id;
 
@@ -22,6 +35,17 @@ module.exports = {
     });
   },
   update: async (req, res) => {
+     /*
+             #swagger.tags = ['Comments']
+             #swagger.summary = "Update Comment"
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                }
+            }
+        
+        */
     const comment = await Comment.findOne({ _id: req.params.id });
     const post = comment?.post;
 
@@ -39,6 +63,11 @@ module.exports = {
     });
   },
   delete: async (req, res) => {
+     /*
+             #swagger.tags = ['Comments']
+             #swagger.summary = "Delete Comment"
+        
+        */
     const comment = await Comment.findOne({ _id: req.params.id });
     const post = comment?.post;
     let data;
